--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <header>
         <nav>
             <ul>
-                <li class="logo"><span><img src="assets/img/logo.png" alt="logo" width="50px"><a href="">SHOP</a></span></li>
-                <li><span><a href="">Our Honey</a></span></li>
-                <li><span><a href="">Traces Honey</a></span></li>
-                <li><span><a href="">Facilities</a></span></li>
-                <li><span><a href="">Contacts</a></span></li>
+                <li class="logo"><img src="assets/img/logo.png" alt="logo"><a href="">SHOP</a></li>
+                <li><a href="">Our Honey</a></li>
+                <li><a href="">Traces Honey</a></li>
+                <li><a href="">Facilities</a></li>
+                <li><a href="">Contacts</a></li>
             </ul>
         </nav>
     </header>
